# cuda-image-kernels

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cuda-image-kernels.code-workspace
scripts/: README.md  generate_test_images.py  test_filters.py
scripts/test_results/: TEST_REPORT.md
src/: CMakeLists.txt  brightness.cuh  channel.cuh  conversion_traits.cuh  gamma.cuh  greyscale.cuh  greyscale_to_rgba.cuh  invert.cuh  kernel_handlers.cu  kernel_handlers.h  kernel_traits.cuh  main.cpp  normalize.cuh  png_utils.cpp  png_utils.h  reorder.cuh  threshold.cuh
tests/: CMakeLists.txt  kernel_tests.cu
